--- a/papaya-generator/src/main/resources/templates/service.java.vm
+++ b/papaya-generator/src/main/resources/templates/service.java.vm
@@ -2,18 +2,41 @@ package ${package.Service};
 
 import ${package.Entity}.${entity};
 import ${superServiceClassPackage};
+import com.baomidou.mybatisplus.plugins.Page;
 
 /**
- * <p>
- * $!{table.comment} 服务类
- * </p>
+ *code is far away from bug with the animal protecting
+ *  ┏┓　　　┏┓
+ *┏┛┻━━━┛┻┓
+ *┃　　　　　　　┃ 　
+ *┃　　　━　　　┃
+ *┃　┳┛　┗┳　┃
+ *┃　　　　　　　┃
+ *┃　　　┻　　　┃
+ *┃　　　　　　　┃
+ *┗━┓　　　┏━┛
+ *　　┃　　　┃神兽保佑
+ *　　┃　　　┃代码无BUG！
+ *　　┃　　　┗━━━┓
+ *　　┃　　　　　　　┣┓
+ *　　┃　　　　　　　┏┛
+ *　　┗┓┓┏━┳┓┏┛
+ *　　　┃┫┫　┃┫┫
+ *　　　┗┻┛　┗┻┛
  *
- * @author ${author}
- * @since ${date}
+ *   @Description : MybatisPlus代码生成器
+ *   ---------------------------------
+ *   @Author : ${author}
+ *   @Date : ${date}
  */
-#if(${kotlin})
-interface ${table.serviceName} : ${superServiceClass}<${entity}>
-#else
 public interface ${table.serviceName} extends ${superServiceClass}<${entity}> {
+
+    /**
+     *
+    */
+    Page<${entity}> listPage( Page<${entity}> page );
+    
+    
+    
+        
 }
-#end
